## Copyright (C) 2017 Jeremiah Orians
## This file is part of stage0.
##
## stage0 is free software: you an redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## stage0 is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with stage0.  If not, see <http://www.gnu.org/licenses/>.

* Current
** Added
Added support for \f, \v and \e

** Changed
Converted M2-Planet to use GNU style error message

** Fixed

** Removed

* 1.0 - 2018-08-26
** Added
Added more generic logic to lookup_type
Added prim_types to simply the task of reducing search space to primitives

** Changed
Reorganized Primitive expression evaluation
Reorganized Collect_local to better match implementation
Broke out process_break
Changed ordering in declare_function to reduce stack operations
Converted weird_string collection into a simpler form
Inlined 2 small stubs as breaking them out wouldn't help implementation
Reordered conditionals for easier implementation and reduced operations
Broke out OUT and FUNCTION to silence a single GCC warning
Moved required_match and line_error into cc_core.c and removed required_match.c
Relocated contents of test/functions to functions
Upgrades mescc-tools to 40537c0200ad28cd5090bc0776251d5983ef56e3 commit
Tweaked order for for, while and do loops to make them more in commone
Tweaked source to better match assembly
Simplify implementation order of logic
Simplifed the promote_type logic to a much breifer form
Broke out generally useful member lookup
Upgraded seed.M1 to be generated by cc_x86

** Fixed