@@ -2,7 +2,7 @@
 ### Copyright (C) 2017 Jan Nieuwenhuizen <janneke@gnu.org>
 ### This file is part of stage0.
 ###
-### stage0 is free software: you an redistribute it and/or modify
+### stage0 is free software: you can redistribute it and/or modify
 ### it under the terms of the GNU General Public License as published by
 ### the Free Software Foundation, either version 3 of the License, or
 ### (at your option) any later version.
