@@ -1,7 +1,7 @@
 ## Copyright (C) 2017 Jeremiah Orians
 ## This file is part of stage0.
 ##
-## stage0 is free software: you an redistribute it and/or modify
+## stage0 is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
 ## the Free Software Foundation, either version 3 of the License, or
 ## (at your option) any later version.
@@ -22,6 +22,7 @@ Added support for \f, \v and \e
 Converted M2-Planet to use GNU style error message
 
 ** Fixed
+Fixed typo in file headers
 
 ** Removed
 
